--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
+    android:background="@drawable/btsdynamite"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".InfoActivity">
 
     <TextView
