--- a/app/src/main/res/layout/notes_row_layout.xml
+++ b/app/src/main/res/layout/notes_row_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="#673AB7">
 
     <TextView
         android:id="@+id/titleTextView"
