Fixed some bugs.

--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -32,6 +32,8 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:scrollbars="horizontal"
+        android:scrollHorizontally="false"
         android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/noteTitle"
