--- a/app/src/main/res/layout/notes_row_layout.xml
+++ b/app/src/main/res/layout/notes_row_layout.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#673AB7">
+    android:background="#99D0FB">
 
     <TextView
         android:id="@+id/titleTextView"
