--- a/app/src/main/res/menu/add_edit_menu.xml
+++ b/app/src/main/res/menu/add_edit_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/save"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/baseline_save_white_36"
         android:title="Save"
         app:showAsAction="ifRoom" />
 </menu>
