--- a/app/src/main/res/layout/notes_row_layout.xml
+++ b/app/src/main/res/layout/notes_row_layout.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
     android:background="#99D0FB">
 
     <TextView
